
**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 1.0.12                              *
*	LAST UPDATE: June 21 2016                    *
*                                                *
**************************************************

Update: June 21rd 2016
==================================================
->Changed Uniformity::VisualizeUniformity::storeCanvasGraph2D from 3 arguments to 4 arguments; last argument is a boolean which allows user to choose to normalize the output (normalization to average of the obserable)
->Added templated operator: template<typename T1, typename T2, typename T3>std::tuple<T1, T2, T3> operator+ to include/UniformityUtilityOperators.h
->Added BinaryOperation Uniformity::addTuple which makes use of new tuple addition operator and can be used by stl algorithms (e.g. std::accumulate) in include/UniformityUtilityFunctions.h (implemented in src//UniformityUtilityFunctions.cpp )
->Added UnaryPredicate Uniformity::divides for tuple scalar division to include/UniformityUtilityOperators.h
->Added functionality in Uniformity::VisualizeUniformity::storeCanvasGraph2D to produce a normalized plot (to the observable average) in addition to standard plot
->Updated Uniformity::InterfaceAnalysis::storeResults() to create both the regular and normalized 3D plots for the requested observables

Update: May 23rd 2016
==================================================
->Renaming Uniformity::AnalyzeResponseUniformity::getFitBoundary() to getParsedInput() since this method is not explicit to the fit boundary but has multiple use cases
->Fixed a bug where Uniformity::AnalyzeResponseUniformity::getFit() was not properly setting the intial guess of a fit for the case where the user enters a complex expression