@@ -23,6 +23,7 @@
 	#Visualizer Config
 	####################################
 	Visualize_Plots = 'true';
+    Visualize_AutoSaveImages = 'false';
     Visualize_DrawPhiLines = 'true';
 [END_RUN_INFO]
 [BEGIN_RUN_LIST]
