@@ -22,5 +22,6 @@
 	#Visualizer Config
 	####################################
 	Visualize_Plots = 'true';
+    Visualize_AutoSaveImages = 'false';
 	Visualize_DrawPhiLines = 'true';
 [END_RUN_INFO]
