@@ -23,5 +23,6 @@
 	#Visualizer Config
 	####################################
 	Visualize_Plots = 'true';
+    Visualize_AutoSaveImages = 'true';
     Visualize_DrawPhiLines = 'true';
 [END_RUN_INFO]
