@@ -7,7 +7,11 @@
 *                                                *
 **************************************************
 
-Update: June 21rd 2016
+Update: June 22nd 2016
+==================================================
+->Added method Uniformity::VisualizeUniformity::save2png() for saving produced TCanvas objects to *.png files
+
+Update: June 21st 2016
 ==================================================
 ->Changed Uniformity::VisualizeUniformity::storeCanvasGraph2D from 3 arguments to 4 arguments; last argument is a boolean which allows user to choose to normalize the output (normalization to average of the obserable)
 ->Added templated operator: template<typename T1, typename T2, typename T3>std::tuple<T1, T2, T3> operator+ to include/UniformityUtilityOperators.h
